Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3056,11 +3056,10 @@ input, select, textarea {
 	@media screen and (max-width: 1280px) {
 
 		/* Header */
-
-			#header {
-				padding: 6em 3em 3em 3em;
-				width: 35%;
-			}
+		#header {
+			padding: 6em 3em 3em 3em;
+			width: 30%;
+		}
 
 				#header h1 {
 					font-size: 1.25em;
@@ -3122,24 +3121,6 @@ input, select, textarea {
 		}
 		.footer-connect {
 			display: none;
-		}
-
-		#navbar {
-			width: 100%; /* Make the navbar cover the full width for small screens */
-			left: 0;
-		}
-
-		#navbar ul {
-			justify-content: space-around; /* Distribute space around links */
-		}
-
-		#navbar ul li {
-			display: inline-block; /* Keep list items horizontal */
-			margin: 0 10px; /* Adjust margin for spacing */
-		}
-
-		#navbar ul li a {
-			padding: 10px 5px; /* Adjust padding as needed */
 		}
 
 		/* Header */
@@ -3251,24 +3232,6 @@ input, select, textarea {
 				font-size: 1.35em;
 			}
 
-		#navbar {
-			width: 100%; /* Make the navbar cover the full width for small screens */
-			left: 0;
-		}
-
-		#navbar ul {
-			justify-content: space-around; /* Distribute space around links */
-		}
-
-		#navbar ul li {
-			display: inline-block; /* Keep list items horizontal */
-			margin: 0 10px; /* Adjust margin for spacing */
-		}
-
-		#navbar ul li a {
-			padding: 10px 5px; /* Adjust padding as needed */
-		}
-
 		/* Main */
 		#main {
 			padding: 2.25em 1.5em 0.25em 1.5em;
@@ -3328,24 +3291,6 @@ input, select, textarea {
 		}
 		.footer-connect {
 			display: none;
-		}
-
-		#navbar {
-			width: 100%; /* Make the navbar cover the full width for small screens */
-			left: 0;
-		}
-
-		#navbar ul {
-			justify-content: space-around; /* Distribute space around links */
-		}
-
-		#navbar ul li {
-			display: inline-block; /* Keep list items horizontal */
-			margin: 0 10px; /* Adjust margin for spacing */
-		}
-
-		#navbar ul li a {
-			padding: 10px 5px; /* Adjust padding as needed */
 		}
 
 	}
@@ -3521,45 +3466,230 @@ input, select, textarea {
     color: #555;
 }
 
-/* Navigation Bar */
-#navbar {
-    background-color: #333;
-    overflow: hidden;
-    position: fixed; /* Make it stick to the top */
-    top: 0;
-    width: calc(100% - 35%); /* Ensure it covers the right side of the page */
-    left: 35%;
-    z-index: 1000; /* Ensure it stays on top of other content */
-}
 
-#navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center; /* Center the navigation links */
-}
 
-#navbar ul li {
-    display: inline; /* Display list items horizontally */
-    margin-right: 15px; /* Space between the links */
-}
+/* XLarge */
 
-#navbar ul li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-	border-bottom: none;
-}
+	@media screen and (max-width: 1800px) {
+		/* Navigation Bar */
+		#navbar {
+			background-color: #333;
+			overflow: hidden;
+			position: fixed; /* Make it stick to the top */
+			top: 0;
+			width: calc(100% - 35%); /* Ensure it covers the right side of the page */
+			left: 35%;
+			z-index: 1000; /* Ensure it stays on top of other content */
+		}
 
-#navbar ul li a:hover {
-    background-color: #ddd;
-    color: black;
-}
+		#navbar ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			text-align: center; /* Center the navigation links */
+		}
+
+		#navbar ul li {
+			display: inline; /* Display list items horizontally */
+			margin-right: 15px; /* Space between the links */
+		}
+
+		#navbar ul li a {
+			display: inline-block;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+			font-size: 17px;
+			border-bottom: none;
+		}
+
+		#navbar ul li a:hover {
+			background-color: #ddd;
+			color: black;
+		}
+	}
+
+/* Large */
+
+	@media screen and (max-width: 1280px) {
+
+		/* Navigation Bar */
+		#navbar {
+			background-color: #333;
+			overflow: hidden;
+			position: fixed; /* Make it stick to the top */
+			top: 0;
+			width: calc(100% - 30%); /* Ensure it covers the right side of the page */
+			left: 30%;
+			z-index: 1000; /* Ensure it stays on top of other content */
+		}
+
+		#navbar ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			text-align: center; /* Center the navigation links */
+		}
+
+		#navbar ul li {
+			display: inline; /* Display list items horizontally */
+			margin-right: 15px; /* Space between the links */
+		}
+
+		#navbar ul li a {
+			display: inline-block;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+			font-size: 17px;
+			border-bottom: none;
+		}
+
+		#navbar ul li a:hover {
+			background-color: #ddd;
+			color: black;
+		}
+
+	}
+
+/* Medium */
+
+	@media screen and (max-width: 980px) {
+
+		/* Navigation Bar */
+		#navbar {
+			background-color: #333;
+			overflow: hidden;
+			position: fixed; /* Make it stick to the top */
+			top: 0;
+			width: 100%; /* Ensure it covers the right side of the page */
+			left: 0;
+			z-index: 1000; /* Ensure it stays on top of other content */
+		}
+
+		#navbar ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: center; /* Center the navigation links */
+		}
+
+		#navbar ul li {
+			display: inline-block; /* Display list items horizontally */
+			margin-right: 0 10px; /* Space between the links */
+		}
+
+		  #navbar ul li a {
+			display: inline-block;
+			color: white;
+			text-align: center;
+			padding: 10px 5px; /* Adjust padding as needed */
+			text-decoration: none;
+			font-size: 17px;
+			border-bottom: none;
+		}
+
+		#navbar ul li a:hover {
+			background-color: #ddd;
+			color: black;
+    	}
+
+	}
+
+/* Small */
+
+	@media screen and (max-width: 736px) {
+
+		/* Navigation Bar */
+		#navbar {
+			background-color: #333;
+			overflow: hidden;
+			position: fixed; /* Make it stick to the top */
+			top: 0;
+			width: 100%; /* Make the navbar cover the full width */
+			left: 0;
+			z-index: 1000; /* Ensure it stays on top of other content */
+		}
+
+		#navbar ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			display: flex; /* Use flexbox to keep items inline */
+			justify-content: center; /* Center the navigation links */
+		}
+
+		#navbar ul li {
+			display: inline-block; /* Keep list items horizontal */
+			margin: 0 10px; /* Adjust margin for spacing */
+		}
+
+		#navbar ul li a {
+			display: inline-block;
+			color: white;
+			text-align: center;
+			padding: 10px 5px; /* Adjust padding as needed */
+			text-decoration: none;
+			font-size: 17px;
+			border-bottom: none;
+		}
+
+		#navbar ul li a:hover {
+			background-color: #ddd;
+			color: black;
+		}
+
+	}
+
+/* XSmall */
+
+	@media screen and (max-width: 480px) {
+
+		/* Navigation Bar */
+		#navbar {
+			background-color: #333;
+			overflow: hidden;
+			position: fixed; /* Make it stick to the top */
+			top: 0;
+			width: 100%; /* Make the navbar cover the full width */
+			left: 0;
+			z-index: 1000; /* Ensure it stays on top of other content */
+		}
+
+		#navbar ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			display: flex; /* Use flexbox to keep items inline */
+			justify-content: center; /* Center the navigation links */
+		}
+
+		#navbar ul li {
+			display: inline-block; /* Keep list items horizontal */
+			margin: 0 10px; /* Adjust margin for spacing */
+		}
+
+		#navbar ul li a {
+			display: inline-block;
+			color: white;
+			text-align: center;
+			padding: 10px 5px; /* Adjust padding as needed */
+			text-decoration: none;
+			font-size: 17px;
+			border-bottom: none;
+		}
+
+		#navbar ul li a:hover {
+			background-color: #ddd;
+			color: black;
+		}
+
+	}
 
 /* Add some padding to sections to avoid content being hidden behind the navbar */
 section {
-    padding: 60px 20px;
+	padding: 60px 20px;
 }
